<resources>
    <string name="app_name">On The Fly</string>
    <string name="username_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="remember">Remember Me</string>
    <string name="login">Log In</string>
    <string name="Agree">I agree</string>
    <string name="Disagree">I decline</string>
    <string name="reportGenerated">Success! Report Generated. Please select or enter an email address to send to: </string>
    <string name="sendToRegEMail">Send to user registered email address.</string>
    <string name="email">youremailaddress@email.com</string>
    <string name="saveLocal">Save Report Locally</string>
    <string name="returnHome">Return to Flights</string>
    <string name="send">Send</string>
    <string name="clear">Clear</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_flight_title">Create Flight</string>
    <string name="flight_date">Date</string>
    <string name="dept_time">Time</string>
    <string name="button_submit">Submit</string>
    <string name="flights">Upcoming Flights</string>
    <string name="date">Date</string>
    <string name="departLoc">Dept Arpt</string>
    <string name="arriveLoc">Arrv Arpt</string>
    <string name="add_flight">Add New Flight</string>
    <string name="edit">edit</string>
    <string name="create_account">+ Create Account</string>
    <string name="new_account">New Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="edit_flight_title">Edit Flight</string>
    <string name="gen_report_button">Generate Weight and Balance Report</string>
    <string name="add_passenger">Add Passenger</string>
    <string name="passenger_view">Passengers</string>
    <string name="cargo_view">Cargo</string>
    <string name="front_cargo">Front Cargo Hold</string>
    <string name="rear_cargo">Rear Cargo Hold</string>
    <string name="curr_weight">Current Weight:</string>
    <string name="reset_password">Password Reset</string>
    <string name="reset_password_instructions">Enter your email below to reset your password.</string>
    <string name="reset_password_button">Reset My Password</string>
    <string name="your_email_hint">your@email.com</string>
    <string name="another_email">Send to a different email address:</string>
    <string name="back">Back</string>
    <string name="edit_details">Details</string>
    <string name="clear_cargo">Remove All Cargo</string>
    <string name="add_bag">Bag Weight (lbs)</string>
    <string name="flight_duration">Duration (min)</string>
    <string name="start_fuel">Starting Fuel Amount (gal)</string>
    <string name="fuel_flow">Flow Rate (gal/hr)</string>
    <string name="taxi_fuel_usage">Taxi Fuel Usage</string>
    <string name="dpt_time">Time</string>
    <string name="duration">Duration</string>
    <string name="ac_num">A/C No</string>
    <string name="dpt_arpt">Dpt Arpt</string>
    <string name="arr_arpt">Arr Arpt</string>
    <string name="delete">Delete Flight</string>
    <string name="plane">Plane</string>
</resources>
