<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_flight_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    tools:context="com.example.noah.onthefly.activities.ActivityFlightList"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <Button
        android:id="@+id/log_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="Log Out"
        style="@style/invisible_button"
        android:onClick="logout"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/flights"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/title_size"
        android:textAlignment="center"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/title2_size"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/departLoc"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/title2_size"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/arriveLoc"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/title2_size"/>
        </TableRow>
        <ScrollView
            android:id="@+id/upcoming_flight_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </TableLayout>

    <Button
        android:id="@+id/add_new_flight_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_flight"
        android:layout_gravity="bottom"
        style="@style/accent_button"
        android:onClick="createFlight"/>

</LinearLayout>
