<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forgot_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorPrimary"
    tools:context="com.example.noah.onthefly.activities.ActivityForgotPassword">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="@string/reset_password"
        android:textSize="@dimen/title_size"
        android:paddingBottom="@dimen/input_padding"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password_instructions"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/instruction_text"
        android:paddingBottom="@dimen/input_padding"
        android:gravity="center"/>

    <EditText
        android:id="@+id/email_field_forgot_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:hint="@string/your_email_hint"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:padding="@dimen/input_padding"
        android:inputType="textEmailAddress"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_password_button"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:onClick="forgotPassword"
        style="@style/accent_button"/>

</LinearLayout>
