<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_flight"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="com.example.noah.onthefly.activities.ActivityEditFlight">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_flight_title"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/title_size"
        android:textAlignment="center"/>
    <TextView
        android:id="@+id/flight_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/passenger_view_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_flight_tab_selected"
            android:text="@string/passenger_view"
            android:textColor="@color/colorAccent"
            android:textAllCaps="false"
            android:textSize="@dimen/title3_size"/>

        <Button
            android:id="@+id/cargo_view_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_flight_tab"
            android:text="@string/cargo_view"
            android:textColor="@color/colorAccent"
            android:textAllCaps="false"
            android:textSize="@dimen/title3_size"/>

    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/edit_flight_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <Button
        android:id="@+id/gen_report_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gen_report_button"
        android:layout_gravity="center"
        android:onClick="generateReport"
        style="@style/accent_button"/>

</LinearLayout>
