<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_acivity_create_flight"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.noah.onthefly.activities.ActivityCreateFlight"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <TextView
        android:paddingTop="@dimen/title_padding"
        android:paddingBottom="@dimen/title_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_flight_title"
        android:textSize="@dimen/title_size"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"/>

    <Spinner
        android:id="@+id/choose_plane_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/input_padding"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@color/colorAccent"/>

    <AutoCompleteTextView
        android:id="@+id/depPick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="13dp"
        android:ems="10"
        android:inputType="textNoSuggestions"
        android:paddingLeft="14dp"
        android:paddingTop="13dp"
        android:background="@color/colorAccent"
        android:layout_marginTop="10dp"
        android:hint="Departure Airport">
        <requestFocus />
    </AutoCompleteTextView>

    <AutoCompleteTextView
        android:id="@+id/arrPick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:paddingTop="13dp"
        android:paddingBottom="13dp"
        android:focusable="true"
        android:paddingLeft="14dp"
        android:background="@color/colorAccent"
        android:inputType="textNoSuggestions"
        android:layout_marginTop="10dp"
        android:hint="Arrival Airport">
        <requestFocus />
    </AutoCompleteTextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/flight_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:padding="@dimen/input_padding"
            android:focusable="false"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:hint="@string/flight_date"
            android:editable="false"
            android:onClick="showDatePicker"/>

        <EditText
            android:id="@+id/flight_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="false"
            android:background="@color/colorAccent"
            android:padding="@dimen/input_padding"
            android:hint="@string/dept_time"
            android:editable="false"
            android:onClick="showTimePicker"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/button_submit"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:onClick="submit"
        style="@style/accent_button"/>

</LinearLayout>