<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.noah.onthefly.fragments.FragmentCargoView">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@drawable/edit_flight_tab"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/front_cargo"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/title4_size"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>

            <TextView
                android:id="@+id/front_cargo_display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/title2_size"
                android:text="Weight: 0.0 lbs"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <Button
                    android:id="@+id/front_cargo_add_btn"
                    android:layout_width="@dimen/circle_button_size"
                    android:layout_height="@dimen/circle_button_size"
                    android:textAlignment="center"
                    android:background="@drawable/circle_add_button"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:text="+"
                    android:textSize="@dimen/title_size"/>

                <Button
                    android:id="@+id/front_cargo_remove_btn"
                    android:layout_width="@dimen/circle_button_size"
                    android:layout_height="@dimen/circle_button_size"
                    android:textAlignment="center"
                    android:background="@drawable/circle_add_button"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:text="-"
                    android:textSize="@dimen/title_size"/>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/front_empty_cargo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="@string/clear_cargo"
            style="@style/accent_button"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@drawable/edit_flight_tab"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_vertical_margin">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rear_cargo"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/title4_size"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>

            <TextView
                android:id="@+id/rear_cargo_display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/title2_size"
                android:text="Weight: 0.0 lbs"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <Button
                    android:id="@+id/rear_cargo_add_btn"
                    android:layout_width="@dimen/circle_button_size"
                    android:layout_height="@dimen/circle_button_size"
                    android:textAlignment="center"
                    android:background="@drawable/circle_add_button"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:text="+"
                    android:textSize="@dimen/title_size"/>

                <Button
                    android:id="@+id/rear_cargo_remove_btn"
                    android:layout_width="@dimen/circle_button_size"
                    android:layout_height="@dimen/circle_button_size"
                    android:textAlignment="center"
                    android:background="@drawable/circle_add_button"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:text="-"
                    android:textSize="@dimen/title_size"/>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/rear_empty_cargo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="@string/clear_cargo"
            style="@style/accent_button"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

</LinearLayout>
